--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.3",
     "vue-template-compiler": "^2.2.1",
+    "vuex": "^2.3.1",
     "webpack": "^1.13.2"
   },
   "dependencies": {
