标签模块新增页面

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "iscroll": "^5.2.0",
     "vue": "^2.2.1",
     "vue-resource": "^1.2.1",
-    "vue-router": "^2.3.0"
+    "vue-router": "^2.3.0",
+    "vuedraggable": "^2.14.1"
   }
 }
