配置文件优化

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config build.config.js",
+    "build": "webpack --config build.config.js --progress",
     "watch": "webpack --config --watch webpack.config.js"
   },
   "author": "",
